# SpecToCodeValidationSubAgent

./: DESIGN.md  README.md  prompt.md
.kiro/agents/: spec-validator.json
.kiro/hooks/: on-demand-validation.kiro.hook  on-demand-validation.md  post-task-validation.kiro.hook  post-task-validation.md  spec-code-validation.kiro.hook
.kiro/skills/: spec-validation-skill.md
.kiro/steering/spec-validation/: brownfield-discovery.md  e2e-workflow-discovery.md  property-test-generation.md  requirements-parsing.md  spec-mutation.md  test-generation-patterns.md  traceability-standards.md  violation-classification.md
tools/api-surface-extractor/: pyproject.toml
tools/api-surface-extractor/extractor/: cli.py  core.py  formatter.py  go_extractor.py  java_extractor.py  python_extractor.py  scanner.py  typescript_extractor.py
